# mypackages

./: LICENSE  README.md
almalinux/: site.yml
almalinux/fc2el/: build.sh  inventory.yml  site.yml
almalinux/fc2el/group_vars/: all.yml
almalinux/group_vars/: all.yml
almalinux/host_vars/: almalinux.yml
almalinux/wayfire/group_vars/: all.yml
almalinux/wayfire/host_vars/: almalinux.yml
archlinux/libmylib/: Makefile.am  Makefile.in  PKGBUILD  aclocal.m4  configure  configure.ac
archlinux/libmylib/config/: config.h.in
archlinux/libmylib/src/: Makefile.in
archlinux/libmylib/tests/: Makefile.in
archlinux/libnbcompat/: PKGBUILD
archlinux/myapp/: Makefile.am  Makefile.in  PKGBUILD  configure  configure.ac
archlinux/myapp/src/: Makefile.am  Makefile.in  myapp.c
archlinux/nmtree/: PKGBUILD
armadillo/: Makefile.am  configure.ac
armadillo/libmylib/: configure.ac
armadillo/libmylib/tests/: .gitignore
armadillo/myapp/: configure.ac
armadillo/myapp/src/: Makefile.am
centos/: mingw-hello.spec  mingw-libmylib.spec
common/arp-scan/: arp-scan.spec  build.sh
common/rust/hello/: .gitignore  build.sh
kali/sssd/: build.sh
libmylib/: .gitignore  Makefile.am  README  build.sh  configure.ac  mkdebpkg.sh  mkdebpkg.sh.in  mkpackage.sh.in
libmylib/misc/: .gitignore  control.in  libmylib.spec.in  manifest.in
libmylib/src/: mylib.c  mylib.h
libmylib/tests/: .gitignore  01-add.c  Makefile.am
mingw/hello/: PKGBUILD
mingw/mingw-w64-git/: PKGBUILD
mingw/mingw-w64-x86_64-check/: PKGBUILD
mingw/mingw-w64-x86_64-corkscrew/: PKGBUILD  build.sh  default.xml
mingw/mingw-w64-x86_64-libev/: PKGBUILD
mingw/mingw-w64-x86_64-libgnurx/: build.sh
mingw/mingw-w64-x86_64-subunit/: PKGBUILD
myapp/: .gitignore  Makefile.am  build.sh  configure.ac  mkdebpkg.sh  myapp.spec  myapp.spec.in
myapp/src/: Makefile.am  myapp.c
myapp/tests/: .gitignore  01-simple.sh  01-simple.sh.in  02-simple.sh  Makefile.am
myservice/: .gitignore  Makefile.am  build.sh  configure.ac
myservice/client/: Makefile.am  client.c  common.c  common.h  recv_handler.c  recv_handler.h
myservice/server/: .gitignore  Makefile.am  accept_handler.c  accept_handler.h  cmd_handler.c  cmd_handler.h  common.c  logrotate-myserver  mydaemon.c  myserver.c  myserver.service.in  mystrlcat.c  mystrlcat.h  recv_handler.c  recv_handler.h  rsyslog-myserver.conf
myservice/tests/: Makefile.am
netbsd/: 00-build_porg.sh  01-build_sudo.sh  10-build_make.sh  11-build_bash.sh  12-build_perl.sh  13-build_pkg_config.sh  14-build_libarchive.sh  15-build_fakeroot.sh  16-build_curl.sh  17-build_pacman.sh
netbsd/cfetch/: Makefile  cfetch.c
netbsd/pacman-patches/: 0001-pacman_util_c.patch  0002-add_fakeroot_option.patch
netbsd/pc/: libcrypto.pc
raspberrypi/endlessh/: build.sh  config.bashrc  endlessh.conf  endlessh.service  postinst  postrm  prerm  rsyslog.conf
ubuntu/archiva/: mkpackage.sh
ubuntu/arm-none-eabi/example/: Makefile
ubuntu/arm-none-eabi/gdb/: build.sh
ubuntu/bc/: build.sh
ubuntu/bionic/: Makefile  README.txt  example.sh  install_packaged.sh  install_packages.sh  localrepo.repo  requirements.txt  rpmmacros  setup.sh
ubuntu/bionic/createrepo_c/: build.sh
ubuntu/bionic/dnf/: build.sh
ubuntu/bionic/libcomps/: build.sh  requirements.txt
ubuntu/bionic/libdnf/: build.sh
ubuntu/bionic/librepo/: build.sh
ubuntu/bionic/libsolv/: build.sh
ubuntu/bionic/modulemd/: .gitignore  build.sh
ubuntu/bionic/rpm/: 0000-change_pkgname_of_lua.patch  build.sh
ubuntu/bionic/zck/: build.sh  requirements.txt
ubuntu/cisco/: build.sh
ubuntu/cisco-icons/: .gitignore  Makefile.am  configure.ac
ubuntu/cisco-icons/icons/: .gitignore  Makefile.am
ubuntu/cmake/: .gitignore  cmake-3.19.8.bashrc  mkdebpkg.sh
ubuntu/couchdb/: build.sh  couchdb.service  postinst  postrm  prerm
ubuntu/couchdb-ldap-auth/: 0000-update_meck_version.patch  0001-fix_duplicate.patch  build.sh
ubuntu/dex/: .gitignore  build.sh  config-ldap.yaml.template  example-app.conf  postinst  postrm  prerm
ubuntu/dex/config/: config-ldap.yaml  dex.service  (+2 more)
ubuntu/diskspd/: mkdebpkg.sh
ubuntu/dnf/: build.sh
ubuntu/erlang/: build.sh
ubuntu/fio/: build.sh
ubuntu/fluentbit/: build.sh  fluent-bit.conf.example  postinst  postrm  prerm
ubuntu/gitbucket/: .gitignore  apache2-gitbucket.conf  build.sh  gitbucket  gitbucket.conf  gitbucket.service  logback-settings.xml  mkdebpkg.sh  postinst  postrm  prerm
ubuntu/hackgen/: build.sh
ubuntu/iperf3/: mkdebpkg.sh
ubuntu/jenkins/: configs.txt
ubuntu/lemon/: mkdebpkg.sh
ubuntu/libcomps/: build.sh
ubuntu/libdnf/: build.sh
ubuntu/libmylib-cmake/: .gitignore  CMakeLists.txt
ubuntu/librenms-mibs/: build.sh
ubuntu/librepo/: build.sh
ubuntu/libsolv/: build.sh
ubuntu/list2pkg/: backup.pl  list2pkg.sh
ubuntu/makeheaders/: mkdebpkg.sh
ubuntu/modulemd/: build.sh  requirements.txt
ubuntu/myapp-cmake/: .gitignore  CMakeLists.txt
ubuntu/mymodule/: .gitignore  99-mymodule.conf  Makefile  mymodule.c
ubuntu/nat/: build.sh
ubuntu/net-snmp/: build.sh
ubuntu/nm-ovs/: build.sh
ubuntu/novnc/: build.sh
ubuntu/oauth2-proxy/: .gitignore  build.sh  oauth2-proxy.service  postinst  postrm  prerm
ubuntu/openjtalk/: .gitignore
ubuntu/openresty/: .gitignore  build.sh  nginx.service  postinst  postrm  prerm
ubuntu/pacman/: build.sh
ubuntu/pcapd/: build.sh  mvsubdir  pcap2xz  pcapd  pcapd.conf  pcapd.cron  pcapd.service  postinst  postrm  prerm  usr.bin.tcpdump
ubuntu/rebar/: build.sh
ubuntu/rebar3/: build.sh
ubuntu/rpm/: build.sh
ubuntu/rpm2deb/: build.sh
ubuntu/rpmdevtools/: .gitignore  mkpackage.sh
ubuntu/ruby/: build.sh  install_pkgs.sh
ubuntu/smbldap-tools/: mkdebpkg.sh
ubuntu/suricata/: build.sh
ubuntu/toppers_asp/: build.sh
ubuntu/toppers_cfg/: 0000_add_next_prior.patch  build.sh
ubuntu/websockify-other/: build.sh
ubuntu/wemux/: mkdebpkg.sh  sha256sum.txt
ubuntu/xunit-plugin/: build.sh
ubuntu/zap/: .gitignore  build.sh  postinst  postrm  prerm  zap.service
ubuntu/zchunk/: build.sh
ubuntu/zck/: build.sh
ubuntu/zeek/: build.sh
(+99 files in other folders)
